packages/kotlin/ttrp-frontend/src/test/resources/expr/negative/typ-001.expr
amount + customer
# expect: TTRP-TYP-001
